# sumo-motion-planning

./: .gitignore  README.md
scenarios/: ped-1.rou.xml  pedestrianFlow.py
scenarios/crosswalk/: scenario.net.xml  scenario.rou.xml
scenarios/enter_road/: scenario.net.xml  scenario.rou.xml
scenarios/exit_road/: scenario.net.xml  scenario.rou.xml
scenarios/left_turn/: scenario.net.xml  scenario.rou.xml  scenario.sumocfg
scenarios/right_turn/: scenario.net.xml  scenario.rou.xml
traci-cpp/: CMakeLists.txt
traci-cpp/data/: map_crosswalk.xml  map_enter_road.xml  map_exit_road.xml  map_left_turn.xml  map_right_turn.xml
traci-cpp/include/traci_api/: TraCIAPI.h  TraCIConstants.h  TraCIDefs.h  config.h  socket.h  storage.h
traci-cpp/src/: TraCIAPI.cpp  socket.cpp  storage.cpp
traci-cpp/tests/: example.cpp  speed_planner_client.cpp  traci_client.cpp
